--- a/src/templates/practice/prac_c2.html
+++ b/src/templates/practice/prac_c2.html
@@ -19,7 +19,7 @@
         <div id="passQ" name="passQ" class="passQ">
           <p class="question-text">
             <b>
-            2. Including the other articles that you have read today, how much new information was in this article?
+            2. How easy was this article to read?
           </b>
           </p>
           <br><br>
@@ -34,8 +34,8 @@
                 <td colspan="2" style="text-align:center;"><input type="range" name="ans_range" id="ans_range" min="0" max="100" style="width:100%;" onchange="printValue()" /></td>
               </tr>
               <tr>
-                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Didn't Learn Anything at All</td>
-                <td style="text-align:right; vertical-align:top;"><b>100</b><br>Learned a Lot</td>
+                <td style="text-align:left; vertical-align:top;"><b>0</b><br>Very Difficult</td>
+                <td style="text-align:right; vertical-align:top;"><b>100</b><br>Very Easy</td>
               </tr>
             </table>
             <input type="hidden" name="fid" value="{{ fid }}" />
