--- a/src/templates/task_c4.html
+++ b/src/templates/task_c4.html
@@ -27,7 +27,7 @@
         <br>
         <div id="passQ" class="passQ">
           <p class="question-text">
-            <b>4. How much did you learn overall from the articles?</b>
+            <b>4. How much did you learn overall from the articles you have read so far today (including this article)?</b>
           </p>
           <br><br>
           <form id="form_c4" name="form_c4" action="{{ action_url }}" method="POST" onsubmit="return saveAns();">
