--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -6,8 +6,14 @@
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <style>
-    body { margin: 0; }
     .cl0 { padding-left: 24px; padding-right: 24px; }
+    body {
+      margin: 0;
+      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
+      font-size: 14pt;
+    }
+    td { font-size: 14pt; }
+    .question-text { font-size: 14pt; text-align: center; }
   </style>
 </head>
 <body>
