--- a/src/templates/practice/prac_c4.html
+++ b/src/templates/practice/prac_c4.html
@@ -20,7 +20,7 @@
         <br>
         <div id="passQ" class="passQ">
           <p class="question-text">
-            <b>4. How much did you learn overall from the practice articles?</b>
+            <b>4. How much did you learn overall from the articles you have read so far today (including this article)?</b>
           </p>
           <br><br>
 
