--- a/src/templates/task_c1.html
+++ b/src/templates/task_c1.html
@@ -26,7 +26,7 @@
                 <br>
                 <div id="passQ">
                     <p class="question-text">
-                      <b>1. How easy was this article to read?</b>
+                      <b>1. Compared to the other articles that you have read today, how much new information was in this article?</b>
                     </p>
                     <br><br>
                     <form id="form_c1" action="{{ url_for('core.task_c1', fid=fid) }}" method="POST" onsubmit="return saveAns()">
@@ -59,11 +59,11 @@
                             <tr>
                               <td style="text-align:left; vertical-align:top;">
                                 <b>0</b><br>
-                                Very Easy
+                                No New Information
                               </td>
                               <td style="text-align:right; vertical-align:top;">
                                 <b>100</b><br>
-                                Very Difficult
+                                Completely New Information
                               </td>
                             </tr>
                           </table>
