--- a/src/templates/task_c3.html
+++ b/src/templates/task_c3.html
@@ -27,7 +27,7 @@
         <br>
         <div id="passQ" class="passQ">
           <p class="question-text">
-            <b>3. How much did you learn from this particular article?</b>
+            <b>3. How much did you learn from this article?</b>
           </p>
           <br><br>
 
