--- a/src/templates/let_comp_one_inst.html
+++ b/src/templates/let_comp_one_inst.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Instruction for Letter Comparison One</title>
   <base target="_top">
   <style>
     .cl2 { margin: 20px; padding: 20px; border: 1px solid #ccc; }
     .cl0 { margin: 20px; }
-    body {
-      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-      font-size: 14pt;
-    }
-    td { font-size: 14pt; }
-    .question-text { font-size: 14pt; text-align: center; }
+    .question-text { text-align: center; }
   </style>
 </head>
 <body>
