--- a/src/templates/practice/prac_a.html
+++ b/src/templates/practice/prac_a.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Practice A</title>
   <!-- If you want to use the same CSS classes as in setting.php, 
        copy them to a .css file or inline <style> block. -->
