--- a/src/templates/timer.html
+++ b/src/templates/timer.html
@@ -3,6 +3,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Countdown Timer</title>
   <base target="_top">
   <!-- If you have a global CSS, link it here
