--- a/src/templates/warning.html
+++ b/src/templates/warning.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Warning</title>
 </head>
 <body>
