--- a/src/static/css/settings.css
+++ b/src/static/css/settings.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-    font-size: 14pt;
-    margin: 20px;
+    font-size: 16pt;
+    margin: 1in;
 }
 
 .cl4 {
@@ -12,7 +12,7 @@ body {
 }
 
 .user-info {
-    font-size: 14pt;
+    font-size: 16pt;
     color: #333;
     margin-bottom: 20px;
 }
