--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -2,11 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Consent</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <style>
-    body { margin: 0; }
     .cl0 { padding-left: 24px; padding-right: 24px; }
   </style>
 </head>
