--- a/src/templates/done.html
+++ b/src/templates/done.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Done</title>
   <base target="_top">
   <style>
     body {
-      margin: 0;
-      padding: 0;
-      height: 100vh;
+      margin: 1in;
+      min-height: calc(100vh - 2in);
       display: flex;
       justify-content: center;
       align-items: center;
-      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
       background-color: #f9f9f9;
     }
 
@@ -26,7 +26,7 @@
     }
 
     p {
-      font-size: 14pt;
+      font-size: 16pt;
       line-height: 1.6;
       color: #333;
       margin: 10px 0;
