--- a/src/templates/instruction_25min.html
+++ b/src/templates/instruction_25min.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Instruction</title>
   <base target="_top">
   <style>
     body {
-      margin: 0;
       padding: 20px;
-      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
       max-width: 100%;
       overflow-x: hidden;
-      font-size: 14pt;
     }
     
     .cl2 {
@@ -48,7 +47,7 @@
       }
       
       td {
-        font-size: 14pt !important;
+        font-size: 16pt !important;
       }
     }
   </style>
@@ -89,7 +88,7 @@
           <table>
           <!-- quesation 1-->
           <tr>
-            <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+            <td style='font-size: 16pt; color:#0B3861; text-align:left;'>
             <b>1. Compared to the other articles that you have read today, how much new information was in this article?</b>
             </td>
           </tr>
@@ -107,8 +106,8 @@
                     </tr>
                     <!-- 分数解释-->
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'>No New Information</td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'>Completely New Information</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'>No New Information</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'>Completely New Information</td>
                     </tr>
                   </table>
               </form>
@@ -118,7 +117,7 @@
       
           <!-- question 2--> 
           <tr>
-            <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+            <td style='font-size: 16pt; color:#0B3861; text-align:left;'>
             <b><br>2. How easy was this article to read?</b>
             </td>
           </tr>
@@ -130,12 +129,12 @@
                       <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
                     </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'><b>0</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'><b>100</b></td>
                     </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'>Very Difficult</td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'>Very Easy</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'>Very Difficult</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'>Very Easy</td>
                     </tr>
                   </table>
               </form>
@@ -144,7 +143,7 @@
       
           <!-- question 3-->
           <tr>
-            <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+            <td style='font-size: 16pt; color:#0B3861; text-align:left;'>
             <b><br>3. How much did you learn from this article?</b>
             </td>
           </tr>
@@ -156,12 +155,12 @@
                       <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
                   </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'><b>0</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'><b>100</b></td>
                     </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
                     </tr>
                   </table>
               </form>
@@ -170,7 +169,7 @@
       
           <!-- question 4-->
           <tr>
-            <td style='font-size:14pt; color:#0B3861; text-align:left;'>
+            <td style='font-size: 16pt; color:#0B3861; text-align:left;'>
             <b><br>4. How much did you learn overall from the articles you have read so far today (including this article)?</b>
             </td>
           </tr>
@@ -182,12 +181,12 @@
                       <td colspan='2' style='text-align:center;'><input type='range' name='ans_range' id='ans_range' min='0' max='100'/></td>
                   </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'><b>0</b></td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'><b>100</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'><b>0</b></td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'><b>100</b></td>
                     </tr>
                     <tr>
-                      <td style='font-size:14pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
-                      <td style='font-size:14pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:left;'>Didn't Learn Anything at All</td>
+                      <td style='font-size: 16pt; color:#0B3861; text-align:right;'>Learned a Lot</td>
                     </tr>
                   </table>
               </form>
