--- a/src/templates/k2.html
+++ b/src/templates/k2.html
@@ -2,16 +2,32 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>K2</title>
   <base target="_top">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <style>
-    body {
-      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-      font-size: 14pt;
+    #k2 {
+      text-align: center;
     }
-    td { font-size: 14pt; }
-    .question-text { font-size: 14pt; text-align: center; }
+    .reminder {
+      font-size: 18pt;
+    }
+    .next-link {
+      display: inline-block;
+      margin-top: 24px;
+      padding: 14px 28px;
+      background-color: #0B3861;
+      color: #fff;
+      border-radius: 6px;
+      text-decoration: none;
+      font-weight: 600;
+    }
+    .next-link:hover,
+    .next-link:focus {
+      background-color: #07264a;
+      color: #fff;
+    }
   </style>
 </head>
 <body>
@@ -22,29 +38,11 @@
         Now, we would like to know how much you learned from the formal task. Please tell us about what you have learned about Health today. You can recall anything you remember from any of the topics you read today. You don't need to remember the information word for word. Please say as much as you can!
       </p>
       <br>
-      <p style="font-size:18pt;">
+      <p class="reminder">
         (And please do not use copy and paste. Sometimes the texts pasted cannot be recorded in the database.)
       </p>
-      <br>
-      <!-- The form posts to the Flask route for letCompOneInst (action_url) -->
-      <form id="form_k2" name="form_k2" action="{{ action_url }}" method="POST" onsubmit="return saveAns();">
-        <textarea id="textarea_k2" name="textarea_k2" rows="10" cols="60" required></textarea>
-        <br><br>
-        <input type="image" name="submit" id="submit" src="{{ url_for('static', filename='images/next_button.gif') }}" alt="Next"/>
-      </form>
+      <a class="next-link" href="{{ action_url }}">Please inform the researcher before pressing here.</a>
     </div>
   </div>
-
-  <script type="text/javascript">
-    function saveAns() {
-      var input = document.getElementById('textarea_k2');
-      if (input.value == '') {
-        return false;
-      } else {
-        // Optionally, you could use AJAX here.
-        return true;
-      }
-    }
-  </script>
 </body>
 </html>
