--- a/src/templates/letter_comp_all.html
+++ b/src/templates/letter_comp_all.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Letter Comparison Round {{ round_number }} - All Items</title>
   <base target="_top">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/letter_style.css') }}">
