--- a/src/templates/task_setting.html
+++ b/src/templates/task_setting.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
     <title>Task Setting</title>
     <base target="_top">
 </head>
