--- a/src/templates/vocab.html
+++ b/src/templates/vocab.html
@@ -2,17 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+
   <title>Vocabulary Test</title>
   <base target="_top">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <link rel="stylesheet" href="{{ url_for('static', filename='css/vocab_style.css') }}">
   <style>
-    body {
-      font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-      font-size: 14pt;
+    .question-text {
+      text-align: center;
     }
-    td { font-size: 14pt; }
-    .question-text { font-size: 14pt; text-align: center; }
   </style>
 </head>
 <body>
