--- a/src/templates/warning.html
+++ b/src/templates/warning.html
@@ -3,13 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="{{ url_for('static', filename='css/global.css') }}">
+  <style>
+    html, body { margin: 0; padding: 0; }
+    body { padding: 0 8px 8px; }
+    p { margin: 0; }
+  </style>
 
   <title>Warning</title>
 </head>
 <body>
   <p style="font-size:16pt; font-weight:bold;">
     Please follow the instructions. 
+    <br>
     Do NOT refresh the page. 
+    <br>
     Do NOT use the back button and forward button in your browser.
   </p>
 </body>
