--- a/src/templates/consent.html
+++ b/src/templates/consent.html
@@ -12,10 +12,25 @@
     body {
       margin: 0;
       font-family: "Times New Roman", "Times New Roman Regular", Times, serif;
-      font-size: 14pt;
+      font-size: 16pt;
     }
-    td { font-size: 14pt; }
-    .question-text { font-size: 14pt; text-align: center; }
+    td { font-size: 16pt; }
+    .question-text { font-size: 16pt; text-align: center; }
+    
+
+    body {
+      margin: 0;
+      padding-top: 0;
+    }
+
+    h1 {
+      margin-top: 0px;
+    }
+
+    .cl0:first-of-type {
+      margin-top: 0px;
+    }
+
   </style>
 </head>
 <body>
