--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -7,7 +7,7 @@
   <title>Index Page</title>
   <style>
     html, body {
-      margin: 1in;
+      margin: 0.25in 1in 0.25in 1in;
       padding: 0;
       min-height: calc(100vh - 2in);
       overflow: hidden;
